<resources>
    <string name="app_name">Monitora, Brasil!</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_dialoga">Dialoga, Cidadão!</string>


    <string name="id_key_idcadastro_novo">idcadastro</string>
    <string name="id_key_votos">votosprojetos</string>
    <string name="id_key_user">user</string>
    <string name="id_key_favoritos">Favoritos</string>
    <string name="id_key_preferencias">pref</string>
    <string name="title_parlamentar_list">Parlamentares</string>
    <string name="title_parlamentar_detail">Parlamentar Detail</string>
    <string name="title_activity_parlamentar2">Parlamentar2Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_projeto_list">Projetos</string>
    <string name="title_projeto_detail">Projeto Detail</string>
    <string name="title_activity_ficha">FichaActivity</string>
    <string name="titulo_gasto">Gastos Parlamentares</string>

    <string name="nao_ha_opnioes">\"Não há mais opniões, se quiser, insira a sua!\"</string>
    <string name="precisa_logar_para_votar">É necessário logar para votar.</string>
    <string name="diga_oq_pensa">Diga o que pensa sobre a pergunta</string>
    <string name="qual_pergunta">Qual é a pergunta?</string>
    <string name="faca_login">Faça login ok?</string>
    <string name="qual_e_mensagem">Qual é a mensagem????</string>
    <string name="title_activity_comentario">Comente</string>

    <string name="title_activity_login">Logar</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Logar</string>
    <string name="action_sign_in_short">Logar</string>
    <string name="logout">Logout</string>
    <string name="login_twitter">Login com Twitter</string>


    <string name="fazer_cadastro">Fazer Cadastro</string>
    <string name="nome">Nome</string>

    <string name="error_invalid_email">Esse email é inválido</string>
    <string name="error_invalid_password">A senha é muito pequena</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="cadastro_atualizado">Cadastro atualizado! ;)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="procurar">Procurar</string>
    <string name="filtrar">Filtrar</string>
    <string name="uf">UF</string>
    <string name="partido">Partido</string>
    <string name="tipo">Tipo</string>
    <string name="categoria">Categoria</string>
    <string name="ano">Ano</string>
    <string name="limpar">Limpar</string>
    <string name="outra_hora">Outra hora</string>
    <string name="mostre_seu_amor">Gostou do app?</string>
    <string name="sobre">O app Monitora, Brasil! não tem vínculo com nenhum partido. Sua finalidade é apenas mostrar para o cidadão
    o que nossos parlamentares estão fazendo e criar um canal de comunicação com eles. \n
    É uma ferramenta para podermos monitorar e cobrar de nossos parlamentares uma atitude ética e moral.\nCompartilhem com seus amigos para tornar essa ferramenta referência no cenário político.
    \nVamos continuar melhorando a ferramenta. Quem quiser ajudar de alguma forma, entre em contato.
    \n\nEquipe Monitora, Brasil!</string>
    <string name="credito">Contato: falemonitora@gmail.com \n \nSite: www.monitorabrasil.com</string>
    <string name="msg_compartilhe">Olhe esse app @MonitoraBrasil para acompanhar os parlamentares https://play.google.com/store/apps/details?id=com.gamfig.monitorabrasil #monitoraBrasil</string>
    <string name="compartilhe">Compartilhe</string>
    <string name="precisa_logar">É necessário logar para salvar</string>
    <string name="comentario">Comentário</string>
    <string name="comentario_projeto">Comentário do Projeto</string>
    <string name="erro_geral">Não foi possível recuperar os registros</string>
    <string name="erro_enviar_comentario">Não foi possível enviar o comentário</string>
    <string name="acompanhar">Acompanhar</string>
    <string name="projetos_monitorados" />
    <string name="camara">Câmara</string>
    <string name="senado">Senado</string>
    <string name="monitorados">Monitorados</string>
    <string name="title_activity_trunfo_main">Super Cidadão</string>
    <string name="partidas_disponiveis">Partidas disponíveis</string>
    <string name="title_activity_main2">Main2Activity</string>

</resources>
