<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:id="@+id/progressBar7" />




            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/llFiltro"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:background="@color/colorDivider"
                android:layout_marginBottom="5dp">

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camara"
                    android:id="@+id/swCamara"
                    android:checked="true" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/senado"
                    android:id="@+id/swSenado"
                    android:checked="true"
                    android:layout_marginLeft="6dp" />

                <Switch
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monitorados"
                    android:id="@+id/swMonitorados"
                    android:checked="false"
                    android:layout_marginLeft="6dp" />
            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rec_projetos"
                android:layout_width="match_parent"
                android:layout_height="600dp"
                android:layout_below="@+id/llFiltro"
                android:layout_weight="1" />



            <View
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_weight="1" />






</RelativeLayout>